--- a/_data/axes.yml
+++ b/_data/axes.yml
@@ -1,11 +1,26 @@
+# Step size is optional
+
 - axis: wght
   name: Weight
-  min: 100
-  max: 900
-  default: 400
-
-- axis: abcd
-  name: Test
-  min: 1
+  min: 0
   max: 1000
-  default: 900
+  default: 0
+
+- axis: opsz
+  name: Optical Size
+  min: 9
+  max: 144
+  default: 9
+
+- axis: GOOF
+  name: Goofy
+  min: 0
+  max: 100
+  default: 0
+
+- axis: WONK
+  name: Wonk
+  min: 0
+  max: 1
+  default: 0.5
+  step: 1
