--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "rimraf": "^3.0.0",
     "sass-loader": "^8.0.0",
     "stylelint": "^12.0.0",
+    "stylelint-config-prettier": "^7.0.0",
     "stylelint-config-standard": "^19.0.0",
     "stylelint-no-unsupported-browser-features": "^4.0.0",
     "url-loader": "^3.0.0",
