--- a/.editorconfig
+++ b/.editorconfig
@@ -1,19 +1,12 @@
 root = true
 
 [*]
-indent_style = space
-indent_size = 2
+indent_style = tab
+indent_size = 4
 end_of_line = lf
 charset = utf-8
 trim_trailing_whitespace = true
 insert_final_newline = true
 
-[*.{json,yml,md}]
-indent_style = space
-indent_size = 2
-
 [*.md]
 trim_trailing_whitespace = false
-
-[*.scss]
-indent_size = 4
