--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
 		"url-loader": "^3.0.0",
 		"webpack": "^4.41.2",
 		"webpack-cli": "^3.3.10",
-		"webpack-manifest-plugin": "^2.2.0"
+		"webpack-manifest-plugin": "v3.0.0-rc.0"
 	},
 	"lint-staged": {
 		"*.{js,json,html,css}": [
