--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
 		"eslint-plugin-compat": "^3.3.0",
 		"eslint-plugin-prettier": "^3.1.1",
 		"file-loader": "^5.0.2",
+		"fontkit": "^1.8.0",
 		"html-minifier": "^4.0.0",
 		"husky": "^3.1.0",
 		"lint-staged": "^9.5.0",
