Use font parsing from specimen-boilerplate-support
Currently just tracking master, locked via yarn.lock.

--- a/package.json
+++ b/package.json
@@ -41,7 +41,6 @@
 		"eslint-plugin-compat": "^3.3.0",
 		"eslint-plugin-prettier": "^3.1.1",
 		"file-loader": "^5.0.2",
-		"fontkit": "^1.8.0",
 		"html-minifier": "^4.0.0",
 		"husky": "^3.1.0",
 		"lint-staged": "^9.5.0",
@@ -52,6 +51,7 @@
 		"postcss-loader": "^3.0.0",
 		"prettier": "^1.19.1",
 		"rimraf": "^3.0.0",
+		"specimen-boilerplate-support": "kabisa/specimen-boilerplate-support#master",
 		"stylelint": "^12.0.0",
 		"stylelint-config-prettier": "^7.0.0",
 		"stylelint-config-standard": "^19.0.0",
