--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
 		"stylelint-config-prettier": "^7.0.0",
 		"stylelint-config-standard": "^19.0.0",
 		"stylelint-no-unsupported-browser-features": "^4.0.0",
+		"svg-url-loader": "^3.0.3",
 		"url-loader": "^3.0.0",
 		"webpack": "^4.41.2",
 		"webpack-cli": "^3.3.10",
