--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "11ty",
+	"name": "specimen-skeleton",
 	"private": true,
 	"version": "1.0.0",
 	"main": "index.js",
@@ -53,7 +53,7 @@
 		"postcss-loader": "^3.0.0",
 		"prettier": "^1.19.1",
 		"rimraf": "^3.0.0",
-		"specimen-boilerplate-support": "https://github.com/kabisa/specimen-boilerplate-support.git#master",
+		"specimen-skeleton-support": "https://github.com/kabisa/specimen-skeleton-support.git#master",
 		"stylelint": "^12.0.0",
 		"stylelint-config-prettier": "^7.0.0",
 		"stylelint-config-standard": "^19.0.0",
