--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,7 +43,7 @@ jobs:
         path: _site/
 
   deploy:
-    if: github.ref == 'refs/heads/master'
+    if: false && github.ref == 'refs/heads/master'
     runs-on: ubuntu-latest
     needs: build
 
