--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
 		"postcss-loader": "^3.0.0",
 		"prettier": "^1.19.1",
 		"rimraf": "^3.0.0",
-		"specimen-skeleton-support": "https://github.com/kabisa/specimen-skeleton-support.git#64651c5edb2e8423c0a1d9536dadac759e218a03",
+		"specimen-skeleton-support": "https://github.com/kabisa/specimen-skeleton-support.git#master",
 		"stylelint": "^12.0.0",
 		"stylelint-config-prettier": "^7.0.0",
 		"stylelint-config-standard": "^19.0.0",
